[gd_scene load_steps=18 format=3 uid="uid://be11gat16xuto"]

[ext_resource type="PackedScene" uid="uid://77ye7lqgs7p4" path="res://scenes/ui_nodes/AgeRatingTextureRect.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/popups/first_time/DateContainer.gd" id="2"]
[ext_resource type="Script" path="res://scenes/popups/first_time/RatingContainer.gd" id="3"]
[ext_resource type="Script" path="res://scenes/popups/first_time/RegionSection.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://bitog3wibdnq4" path="res://assets/ratings/esrb/E10.png" id="5"]
[ext_resource type="Texture2D" uid="uid://kgdyc5cae5vw" path="res://assets/ratings/esrb/M.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b8uaubf6tjd03" path="res://assets/ratings/esrb/T.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bncctv660qkvf" path="res://assets/ratings/esrb/E.png" id="8"]
[ext_resource type="Texture2D" uid="uid://40hcnuvh33vc" path="res://assets/ratings/esrb/AO.png" id="9"]
[ext_resource type="Texture2D" uid="uid://y8qx7oo4ph2" path="res://assets/systems/genesis-photo.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cpo8vv35tfj4n" path="res://assets/systems/snes-photo.png" id="11"]
[ext_resource type="Texture2D" uid="uid://ctvgio1p7e2gw" path="res://assets/systems/nes-photo.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dlsmyk5iq1n0p" path="res://assets/systems/tg16-photo.png" id="13"]
[ext_resource type="Texture2D" uid="uid://boc8dratslg5t" path="res://assets/systems/videopac-photo.png" id="14"]
[ext_resource type="Texture2D" uid="uid://bus4vapc51lbv" path="res://assets/systems/tg-cd-photo.png" id="15"]
[ext_resource type="Script" path="res://scenes/popups/first_time/SystemsContainer.gd" id="16"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="17"]

[node name="RegionSection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IntroLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Select your current region. This is purely to change visual elements, and has no impact whatsoever on what games you can play."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/IntroLabel"]
script = ExtResource("17")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Region: "

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/Label"]
script = ExtResource("17")

[node name="RegionOptions" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../../NextButton")
item_count = 3
selected = 0
popup/item_0/text = "USA"
popup/item_0/id = 0
popup/item_1/text = "Europe"
popup/item_1/id = 1
popup/item_2/text = "Japan"
popup/item_2/id = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/RegionOptions"]
script = ExtResource("17")

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "You can also manually configure the following fields to your desire:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/Label2"]
script = ExtResource("17")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RatingContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/HBoxContainer"]
layout_mode = 2
text = "Rating System: "

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/HBoxContainer/Label"]
script = ExtResource("17")

[node name="RatingOptions" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_right = NodePath("../../../DateContainer/HBoxContainer/DateOptions")
item_count = 3
selected = 0
popup/item_0/text = "ESRB"
popup/item_0/id = 0
popup/item_1/text = "PEGI"
popup/item_1/id = 1
popup/item_2/text = "CERO"
popup/item_2/id = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/HBoxContainer/RatingOptions"]
script = ExtResource("17")
next = NodePath("../../../../DateContainer/HBoxContainer/Label")

[node name="RatingIcons" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="1" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/RatingIcons" instance=ExtResource("1")]
custom_minimum_size = Vector2(72, 90)
layout_mode = 2
texture = ExtResource("8")

[node name="2" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/RatingIcons" instance=ExtResource("1")]
custom_minimum_size = Vector2(72, 90)
layout_mode = 2
texture = ExtResource("5")

[node name="3" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/RatingIcons" instance=ExtResource("1")]
custom_minimum_size = Vector2(72, 90)
layout_mode = 2
texture = ExtResource("7")

[node name="4" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/RatingIcons" instance=ExtResource("1")]
custom_minimum_size = Vector2(72, 90)
layout_mode = 2
texture = ExtResource("6")

[node name="5" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/RatingIcons" instance=ExtResource("1")]
custom_minimum_size = Vector2(72, 90)
layout_mode = 2
texture = ExtResource("9")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="DateContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer/HBoxContainer"]
layout_mode = 2
text = "Date format:"

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer/HBoxContainer/Label"]
script = ExtResource("17")
previous = NodePath("../../../../RatingContainer/HBoxContainer/RatingOptions")

[node name="DateOptions" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../../RatingContainer/HBoxContainer/RatingOptions")
item_count = 3
selected = 0
popup/item_0/text = "MM/DD/YYYY"
popup/item_0/id = 0
popup/item_1/text = "DD/MM/YYYY"
popup/item_1/id = 1
popup/item_2/text = "YYYY/MM/DD"
popup/item_2/id = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer/HBoxContainer/DateOptions"]
script = ExtResource("17")
next = NodePath("../../../../../SystemsContainer/Label")

[node name="ExampleDate" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Timer" type="Timer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer"]
wait_time = 0.1
autostart = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SystemsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("16")

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer"]
layout_mode = 2
tooltip_text = "Pick the correct system names according to your region."
text = "System names: "

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/Label"]
script = ExtResource("17")
previous = NodePath("../../../HBoxContainer2/DateContainer/HBoxContainer/DateOptions")

[node name="HFlowContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenesisOpt" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "Sega Genesis"
popup/item_0/id = 0
popup/item_1/text = "Sega Megadrive"
popup/item_1/id = 1

[node name="GenesisIcon" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("10")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NESOpt" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "NES"
popup/item_0/id = 0
popup/item_1/text = "Famicom"
popup/item_1/id = 1

[node name="NESIcon" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("12")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer3" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SNESOpt" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "SNES"
popup/item_0/id = 0
popup/item_1/text = "Super Famicom"
popup/item_1/id = 1

[node name="SNESIcon" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("11")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer4" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TG16Opt" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "TurboGrafx-16"
popup/item_0/id = 0
popup/item_1/text = "PC Engine"
popup/item_1/id = 1

[node name="TG16Icon" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("13")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer5" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TGCDOpt" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "TurboGrafx-CD"
popup/item_0/id = 0
popup/item_1/text = "PC Engine CD"
popup/item_1/id = 1

[node name="TGCDIcon" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("15")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer6" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Odyssey2Opt" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "Videopac"
popup/item_0/id = 0
popup/item_1/text = "Odyssey²"
popup/item_1/id = 1

[node name="Odyssey2Icon" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("14")
expand_mode = 1
stretch_mode = 5

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ScrollContainer/VBoxContainer/HBoxContainer/RegionOptions")
text = "Next"

[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/RegionOptions" to="." method="_on_RegionOptions_item_selected"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer/HBoxContainer/RatingOptions" to="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/RatingContainer" method="_on_RatingOptions_item_selected"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer/HBoxContainer/DateOptions" to="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer" method="_on_DateOptions_item_selected"]
[connection signal="timeout" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer/Timer" to="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/DateContainer" method="_on_Timer_timeout"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer/GenesisOpt" to="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer" method="set_genesis_region"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer2/NESOpt" to="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer" method="set_nes_region"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer3/SNESOpt" to="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer" method="set_snes_region"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer4/TG16Opt" to="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer" method="set_tg16_region"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer5/TGCDOpt" to="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer" method="set_tgcd_region"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer/HFlowContainer/HBoxContainer6/Odyssey2Opt" to="VBoxContainer/ScrollContainer/VBoxContainer/SystemsContainer" method="set_odyssey2_region"]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
